attempting to do more cleanup and to make some of the containers strongly-typed.